okay finally figured out an algorithm to stop the navImg from redisplaying after resizing a screen where it wasn't displayed. Just realized it's a matter of telling the computer what you want to happen.Also added grid gaps

--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,8 @@ display:grid;
     position:relative;
     grid-template-columns: 320px 320px; ; 
   grid-template-rows: 320px 320px;
- 
+   grid-column-gap: 3.5px;
+   grid-row-gap:3.5px;
 }
 #int, #ext{
 width:320px;
